# BRugs

./: DESCRIPTION  MD5  NAMESPACE  NEWS  configure  configure.ac  configure.win
R/: BRugsFit.R  bgr.grid.R  bgr.point.R  buffer.R  bugs.data.R  bugs.inits.R  buildMCMC.R  current.values.R  dic.clear.R  dic.set.R  dic.stats.R  dimensions.R  formatdata.R  get.chain.R  get.graphObj.R  get.num.chains.R  get.updaterObj.R  info.modules.R  info.node.R  info.updaters.R  internal.R  loadModule.R  model.adaptivePhase.R  model.check.R  model.compile.R  model.data.R  model.dynamic.R  model.factory.R  model.gen.inits.R  model.get.seed.R  model.inits.R  model.iteration.R  model.modules.R  model.names.R  model.precision.R  model.save.state.R  model.set.seed.R  model.setAP.R  model.setIts.R  model.setOR.R  (+37 more)
R/unix/: help.R
R/windows/: findOpenBUGS.R  help.R
data/: ratsdata.RData  ratsinits.RData
inst/: CITATION
inst/OpenBUGS/: BackBUGS.lnk  CBugs.c  ClassicBugs.lnk  LinBUGS  Randnumseeds.html  Randnumseeds.odc  Script.odc  cbugs  winbugs.exe.manifest
inst/OpenBUGS/Code/: Containers.ocf  Converters.ocf  Dialog.ocf  Files.ocf  Fonts.ocf  Init.ocf  Integers.ocf  Kernel.ocf  Mechanisms.ocf  Meta.ocf  Models.ocf  Out.ocf  Ports.ocf  SMath.ocf  Sequencers.ocf
inst/OpenBUGS/Developer/: BRugs.html  BRugsH.html  BlueDiamonds.html  CBugs.html  Compiling.html  Distributing.html  Initializing.html  Introduction.html  Linking.html  Make.html  Manual.html  NewThreeZeroOne1.html  Randnum.html  SamplingAlgorithms.html  Test.html  Tools.html  WritingBUGSExtensions.html
inst/OpenBUGS/Docu/: BB-Open-Source-License.odc  BRugs Manual.html  BRugs Manual.odc  BugsC.html  BugsC.odc  CBugs.c  CBugs.html  CBugs.odc  Changing MCMC Defaults.html  Changing MCMC Defaults.odc  Compound Documents.html  Compound Documents.odc  Developer Manual.html  Developer Manual.odc  Distributions.html  Distributions.odc  DoodleBUGS Manual.html  DoodleBUGS Manual.odc  ElevationData.odc  ElevationDiscInits.html  ElevationDiscInits.odc  ForestData.html  (+101 more)
man/: BRugs.Rd  BRugsFit.Rd  bgr.point.Rd  bugs.data.Rd  bugs.inits.Rd  buildMCMC.Rd  current.values.Rd  get.Obj.Rd  get.chain.Rd  get.num.chains.Rd  help.WinBUGS.Rd  loadModule.Rd  model.adaptivePhase.Rd  model.check.Rd  model.compile.Rd  model.data.Rd  model.dynamic.Rd  model.factory.Rd  model.gen.inits.Rd  model.inits.Rd  model.iteration.Rd  model.modules.Rd  model.precision.Rd  model.save.state.Rd  model.seed.Rd  model.setAP.Rd  model.update.Rd  plot.bgr.Rd  plot.density.Rd  samples.autoC.Rd  samples.bgr.Rd  samples.coda.Rd  samples.density.Rd  samples.history.Rd  samples.sample.Rd  samples.stats.Rd  set.values.Rd  write.datafile.Rd  write.model.Rd
src/: BugsHelper.c  Makefile.win
tests/: BRugs.R  BRugs.Rout.save  examples.R  examples.Rout.save  functions.Rout.save
(+946 files in other folders)
